# DDK_DEMO

./: crash.txt  detecte.txt  local.properties  log.txt  newipu.txt  originipu.txt  readme  test.txt
app/: .gitignore  CMakeLists.txt  build.gradle
app/libs/: huawei-hiai-nlu-8.1.0.302.aar  huawei-hiai-vision-8.1.0.300.aar  huawei-hiai-vision-8.1.0.302.aar
app/src/androidTest/java/com/cambricon/productdisplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: error.html
app/src/main/assets/cpp_backup/: CMakeLists.txt  caffe_detection.cpp  caffe_detection.hpp  caffe_jni.cpp  caffe_mobile.cpp  caffe_mobile.hpp  ddk_detecte_jni.cpp  detecte_jni.cpp  face_detector.cpp  face_jni.cpp  helpers.hpp  offclassify.cpp  single_jni.cpp  single_test.cpp
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/cambricon/productdisplay/activity/: AboutActivity.java  AestheticsScoreActivity.java  BaseActivity.java  ClassificationActivity.java  ClassificationData.java  CodeDetecActivity.java  DataFragment.java  DetectionActivity.java  DetectionData.java  DocumentDetectionAct.java  EntityDetectActivity.java  FaceAttributeActivity.java  FaceCompareActivity.java  FaceDetectorActivity.java  FaceDetectorData.java  FaceFeaturesDetectActivity.java  FaceParsingActivity.java  HeadPoseActivity.java  HomeActivity.java  LabelDetectorActivity.java  MoreFunctionsAct.java  NewsFragment.java  NewsInfoActivity.java  OffLineClassifiactionAct.java  OffLineDetectionAct.java  ParticipleActivity.java  SceneDetectorActivity.java  SegmentActivity.java  SemanticsActivity.java  SimpleClassificationAct.java  SingleChartActivity.java  SingleNetFuncAct.java  SpeechRecognitionActivity.java  SplashActivity.java  SuperResolutionActivity.java  TabFragment.java  TestFragment.java  TextOcrAct.java  TextSuperResolutionActivity.java  WordSegmentActivity.java  (+1 more)
app/src/main/java/com/cambricon/productdisplay/adapter/: BannerPagerAdapter.java  DetectIPUPagerAdapter.java  DetectPagerAdapter.java  FaceDetectorAdapter.java  GridViewAdapter.java  MoreFunctionRecylerAdaper.java  NewsAdapter.java  SemanticsAdapter.java  TabAdapter.java  UltraPagerAdapter.java
app/src/main/java/com/cambricon/productdisplay/bean/: Assistant.java  ClassificationImage.java  DetectionImage.java  FaceDetectionImage.java  News.java  Participle.java  SpeechItem.java
app/src/main/java/com/cambricon/productdisplay/caffenative/: CaffeClassification.java  CaffeDetection.java  CaffeMobile.java  FaceDetection.java  OffLineCaffeClassification.java  OfflineDetecte.java  SingleNetDetection.java
app/src/main/java/com/cambricon/productdisplay/db/: ClassificationDB.java  CommDB.java  DetectionDB.java  FaceDetectDB.java
app/src/main/java/com/cambricon/productdisplay/task/: ASTask.java  AestheticsScoreListener.java  BannerTimerTask.java  CNNListener.java  FaceDetectTask.java  LabelDetectListener.java  LabelDetectTask.java  MMListener.java  OnItemClickListener.java  SimpleNetTimeListener.java
app/src/main/java/com/cambricon/productdisplay/utils/: AssetUtil.java  CloseUtils.java  Config.java  ConnectManager.java  ConvertUtil.java  DataUtil.java  DialogUtil.java  FileUtils.java  LogUtil.java  NewsUtil.java  RootUtil.java  ShellUtils.java  SingleChartService.java  StatusBarCompat.java
app/src/main/java/com/cambricon/productdisplay/view/: ChartService.java  DepthPageTransformer.java  ResultDialog.java  RippleIntroView.java
app/src/main/res/anim/: dialog_enter.xml  dialog_exit.xml  item_animation_fall_down.xml
app/src/main/res/drawable/: conor_bg_grey.xml  conor_bg_white.xml  divider.xml  imageboundshape.xml  indicator_bg.xml  layer_launcher.xml  progressbar.xml  testdrawable.xml  toolbar_bg.xml  transpant_bg.xml
app/src/main/res/layout/: about_layout.xml  about_list_item.xml  activity_aesthetics_score.xml  activity_code_detec.xml  activity_entity_detect.xml  activity_face_attribute.xml  activity_face_compare.xml  activity_face_detector.xml  activity_face_features_detect.xml  activity_face_parsing.xml  activity_head_pose.xml  activity_label_detector.xml  activity_more_functions.xml  activity_news_info.xml  activity_participle.xml  activity_scene_detector.xml  activity_segment.xml  activity_semantics.xml  activity_show.xml  activity_single_chart.xml  activity_speech_recognition.xml  activity_super_resolution.xml  activity_text_super_resolution.xml  activity_word_segment.xml  activity_word_split.xml  ad_banner_item.xml  base_layout.xml  classification_layout.xml  classifychart_layout.xml  classifyoffchart_layout.xml  custom_dialog.xml  data_fragment.xml  detection_layout.xml  document_detection_layout.xml  fragment_classification_data.xml  fragment_detection_data.xml  fragment_face_detector_data.xml  gridview_item.xml  header.xml  home_layout.xml  (+16 more)
app/src/main/res/menu/: main.xml  navigation.xml  news_toolbar.xml  semantics_toolbar.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/cambricon/productdisplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
